--- a/resources/lib.projectsveltos.io_configurationbundles.yaml
+++ b/resources/lib.projectsveltos.io_configurationbundles.yaml
@@ -39,6 +39,16 @@ spec:
             type: object
           spec:
             properties:
+              helmChartVersion:
+                description: |-
+                  HelmChartVersion indicates the chart version of the Helm release
+                  these resources belong to, if any
+                type: string
+              helmIcon:
+                description: |-
+                  HelmIcon indicates the URL of the icon of the Helm release
+                  these resources belong to, if any
+                type: string
               helmReleaseName:
                 description: |-
                   HelmReleaseName indicates the name of the Helm release
@@ -56,6 +66,11 @@ spec:
                   part of a Helm release uninstallation process.
                   This can be used to trigger specific cleanup or post-uninstall hooks.
                 type: boolean
+              helmRepoURL:
+                description: |-
+                  HelmRepoURL indicates the repo URL of the Helm release
+                  these resources belong to, if any
+                type: string
               isLastHelmReleaseBundle:
                 default: false
                 description: |-
